feat: add config

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
 # Server
 SERVER_PORT=8080
 
-# MySQL
+# MySQL（MYSQL_ROOT_PASSWORD 与 MYSQL_DSN 中的密码须一致；改密码后需删数据卷重建）
+MYSQL_ROOT_PASSWORD=root
 MYSQL_DSN=root:root@tcp(mysql:3306)/community?charset=utf8mb4&parseTime=True
 
 # JWT (C端与B端隔离，分别使用不同密钥)
