--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
 # Server
 SERVER_PORT=8080
 
-# MySQL
-MYSQL_DSN=root:root@tcp(mysql:3306)/community?charset=utf8mb4&parseTime=True
+# MySQL（改密码时 MYSQL_ROOT_PASSWORD 与 MYSQL_DSN 里的密码必须一致；改完后需删卷重建：见 README）
+MYSQL_ROOT_PASSWORD=vibecoding
+MYSQL_DSN=root:vibecoding@tcp(mysql:3306)/community?charset=utf8mb4&parseTime=True
 
 # JWT (C端与B端隔离，分别使用不同密钥)
 JWT_USER_SECRET=user-jwt-secret-change-in-prod
