--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   mysql:
     image: mysql:8.0
     environment:
-      MYSQL_ROOT_PASSWORD: root
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_DATABASE: community
     ports:
       - "3306:3306"
@@ -48,7 +48,7 @@ services:
         condition: service_started
     environment:
       SERVER_PORT: 8080
-      MYSQL_DSN: root:root@tcp(mysql:3306)/community?charset=utf8mb4&parseTime=True
+      MYSQL_DSN: ${MYSQL_DSN}
       JWT_USER_SECRET: ${JWT_USER_SECRET:-user-secret}
       JWT_ADMIN_SECRET: ${JWT_ADMIN_SECRET:-admin-secret}
       UPLOAD_DIR: /data/upload
